# fifth-sym.p.hon.y

./: .actrc  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  README-OVERSEERR-AUDIO.md  README.md  docker-compose.yml  gui.py  lint.sh  main.py  pyproject.toml  run.sh  run_gui.sh  setup_aliases.sh  setup_aliases.sh.template  test_webhook_standalone.py  tts_server.py
.github/workflows/: code-quality.yml  dependency-check.yml  domain-sanitization.yml  sast-analysis.yml  security-matrix.yml  template-compliance.yml
assets/visual_novel/: README.md
assets/visualization/: README.md
backups/: .gitignore
config/: folders.yaml.template  overseerr-notifier.yaml.template  settings.yaml
config/onepassword/: api_vault_items.yaml  vault_config.yaml
config/prompts/: completion_prompts.yaml  error_prompts.yaml  reminder_prompts.yaml  system_prompts.yaml
config/templates/: output_formats.yaml  voice_templates.yaml
config/youtube/: overrides.yaml  settings.yaml
database/init/: 01_schema.sql
docs/: 1PASSWORD-PROMPT-SETUP.md  ITERM-REMOTE-ACCESS.md  MCP-QUICKSTART.md  README.md
docs/internal/: 1PASSWORD-VAULT-STRUCTURE.md  BRAIN-DUMP.md  News_Explorer_Export.opml  README.md  TEMPLATE_SECURITY.md
examples/: README.md  avatar_example.py  claude_monitor_clean.py  claude_monitor_example.py  claude_monitor_interactive.py  claude_monitor_multi.py  claude_monitor_terminal.py  claude_monitor_tui.py  claude_monitor_ultimate.py  folder_example.py  integrated_system.py  voice_example.py
memory/: .gitignore  README.md
modules/: README-github-bot-tester.md  __init__.py  anilist_client.py  applescript_bridge.py  audio_tts.py  avatar_emotion_engine.py  claude_code_monitor.py  claude_integration.py  claude_monitor.py  cli_ui.py  dashboard.py  dashboard_voice_integration.py  docker_monitor.py  folder_dashboard_widget.py  folder_manager.py  github_bot_tester.py  hud_overlay.py  media_control.py  onepassword_manager.py  output_translator.py  overseerr_webhook.py  reminder_system.py  response_voice_adapter.py  script_runner.py  shell_widgets.py  smart_media_control.py  symlink_manager.py  visual_novel_widget.py  visualization_widget.py  voice_handler.py  voice_input.py  voice_listener.py  voice_permission_hook.py  youtube_models.py  youtube_subscriptions.py
modules/agent_monitor/: MODULAR_README.md  __init__.py  __main__.py  app.py  app_rich.py  launch_modules.py  test_agent_activity.py  test_all_modules.py  test_context_panel.py
modules/agent_monitor/modules/: __init__.py  agent_activity.py  content.py  infrastructure.py  system_status.py
modules/agent_monitor/panels/: __init__.py  audio_history.py  documentation.py  observatory.py
modules/agent_monitor/shared/: __init__.py  agent_tracking.py  config.py  keyboard.py  mcp_utils.py  rich_utils.py  styling.py
modules/agent_monitor/utils/: __init__.py  relative_time.py  screenshot.py
modules/chat/: __init__.py  chat_client.py  chat_server.py
modules/mcp/: __init__.py  chat_tool.py  postgres_mcp.py
modules/orchestrator/: __init__.py  chat_integration.py  mcp_client.py  permission_engine.py  prompt_manager.py
recycled/: .gitignore  README.md
scripts/: ORGANIZATION.md  README-ALIASES.md  README.md  claude-code-hook.sh  error_demo.py  generate_voice_phrases.py  install-aliases.sh  launch-rich-tui.sh  launch_agent_monitor.py  migrate-audio-files.py  play_voice_phrase.sh  search_hayden_voice.py  symphony-aliases.zsh  test-tui.py
scripts/cli/: cli.py  dashboard.py  gui_orchestrator.py
scripts/development/: lint.sh  test-workflows.sh
scripts/favorites/: launch_agent_monitor.py  launch_agent_monitor_screen.py
scripts/launchers/: monitor-clean.sh  monitor-dashboard.sh  monitor-interactive.sh  monitor.sh  run_dashboard.sh  start-overseerr-webhook.sh
scripts/services/: start_chat_client.sh  start_chat_server.sh
scripts/setup/: create-scripts.sh  setup_aliases.sh
scripts/symlinks/: .symlink_metadata.json  .symlink_metadata.json.template  human_log.sh
scripts/system/: update-external-repos.sh
scripts/templates/: lint.sh.template
scripts/user-scripts/: opml_to_txt.py  quick_test.py
scripts/utils/: workspace_maid.py
tasks/: REORGANIZATION-COMPLETE.md  TASK-001-fix-ci-pipeline.md
