[project]
name = "fifth-symphony"
version = "0.1.0"
description = "AI-powered distributed automation conductor with voice feedback and network orchestration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "elevenlabs>=1.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "asyncio-throttle>=1.0.2",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "watchdog>=3.0.0",
    # GUI Dependencies
    "PySide6>=6.6.0",
    "pyqtdarktheme>=2.1.0",
    "qasync>=0.24.0",
    # Terminal emulator for embedded console
    "ptyprocess>=0.7.0",
    # Icons and themes
    "qtawesome>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.3.0",
    "pylint>=3.3.8",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.12.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".venv",
    "venv",
    "old-scripts",
    "__pycache__",
    ".git",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C", "Q"]  # Core quality rules
ignore = [
    "E501",    # line-too-long (handled by formatter)
    "N802",    # invalid-function-name (Qt methods)
    "N812",    # lowercase-imported-as-non-lowercase
    "BLE001",  # blind-except (sometimes necessary)
    "C901",    # complex-structure (sometimes unavoidable)
    "G004",    # logging-f-string (f-strings are more readable)
    "S603",    # subprocess-without-shell-equals-true (secure usage)
    "S607",    # start-process-with-partial-path (scripts are trusted)
    "S311",    # suspicious-non-cryptographic-random-usage (not for crypto)
    "S110",    # try-except-pass (sometimes intentional)
    "ARG002",  # unused-method-argument (GUI callbacks)
    "FBT001",  # boolean-type-hint-positional-argument
    "FBT002",  # boolean-default-value-positional-argument  
    "FBT003",  # boolean-positional-value-in-call
    "DTZ005",  # call-datetime-now-without-tzinfo (local time is fine)
    "DTZ006",  # call-datetime-fromtimestamp (local time is fine)
    "ASYNC221", # run-process-in-async-function (intentional)
    "ASYNC230", # blocking-open-call-in-async-function (quick reads)
    "B007",    # unused-loop-control-variable (enumerate with unused index)
    "B019",    # cached-instance-method (lru_cache on methods is fine)
    "PLC0415", # import-outside-top-level (conditional imports)
    "EXE001",  # shebang-not-executable (scripts might be run via interpreter)
]

[tool.black]
line-length = 100
target-version = ["py310"]
